--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <!-- Display -->
               <input
                 id="calc-display"
-                class="form-control form-control-lg"
+                class="form-control form-control-lg text-end"
                 type="text"
                 placeholder=""
                 aria-label=".form-control-lg example"
@@ -107,11 +107,16 @@
         </div>
       </div>
     </div>
+
     <!--Bootstrap JavaScript-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Custom JavaScript -->
+    <script src="./script.js">
+    </script>
   </body>
 </html>
