--- a/index.html
+++ b/index.html
@@ -1,122 +1,318 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Scientific Calculator</title>
+    <!-- Faivicon -->
+    <link rel="icon" type="image/x-icon" href="/img/favicon.svg" />
     <!-- Bootstrap CSS -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="styles.css" />
   </head>
+
   <body>
-    <div class="container">
-      <h1 class="text-center mt-3">Scientific Calculator</h1>
-      <!--Card-->
-      <div class="row">
-        <div class="col-12 offset-md-3 col-md-6">
+    <div class="container px-4">
+      <h1 class="text-center mt-4 mb-4">Scientific Calculator</h1>
+      <!-- Display -->
+      <div class="justify-content-center">
+        <div>
           <div class="card">
             <div class="card-body">
-            <!-- Display -->
               <input
                 id="calc-display"
                 class="form-control form-control-lg text-end"
                 type="text"
-                placeholder=""
                 aria-label=".form-control-lg example"
+                placeholder="0"
                 readonly
               />
-              <!-- Buttons -->
-              <div class="row gx-1">
-                <!-- First Row -->
-                <div class="col-3">
-                    <button type="button" class="btn btn-light w-100 mt-2 border">(</button>
-                </div>
-                <div class="col-3">
-                    <button type="button" class="btn btn-light w-100 mt-2 border">)</button>
-                </div>
-                <div class="col-3">
-                    <button type="button" class="btn btn-light w-100 mt-2 border">%</button>
-                </div>
-                <div class="col-3">
-                    <button type="button" class="btn btn-light w-100 mt-2 border">AC</button>
-                </div>
-
-                <!-- Second Row -->
-                <div class="col-3">
-                    <button type="button" class="btn btn-light w-100 mt-2 border">7</button>
-                </div>
-                <div class="col-3">
-                    <button type="button" class="btn btn-light w-100 mt-2 border">8</button>
-                </div>
-                <div class="col-3">
-                    <button type="button" class="btn btn-light w-100 mt-2 border">9</button>
-                </div>
-                <div class="col-3">
-                    <button type="button" class="btn btn-light w-100 mt-2 border">÷</button>
-                </div>
-                
-                <!-- Third Row -->
-                <div class="col-3">
-                    <button type="button" class="btn btn-light w-100 mt-2 border">4</button>
-                </div>
-                <div class="col-3">
-                    <button type="button" class="btn btn-light w-100 mt-2 border">5</button>
-                </div>
-                <div class="col-3">
-                    <button type="button" class="btn btn-light w-100 mt-2 border">6</button>
-                </div>
-                <div class="col-3">
-                    <button type="button" class="btn btn-light w-100 mt-2 border">x</button>
-                </div>
-
-                <!-- Fourth Row -->
-                <div class="col-3">
-                    <button type="button" class="btn btn-light w-100 mt-2 border">1</button>
-                </div>
-                <div class="col-3">
-                    <button type="button" class="btn btn-light w-100 mt-2 border">2</button>
-                </div>
-                <div class="col-3">
-                    <button type="button" class="btn btn-light w-100 mt-2 border">3</button>
-                </div>
-                <div class="col-3">
-                    <button type="button" class="btn btn-light w-100 mt-2 border">-</button>
-                </div>
-
-                <!-- Fifth Row -->
-                <div class="col-3">
-                    <button type="button" class="btn btn-light w-100 mt-2 border">0</button>
-                </div>
-                <div class="col-3">
-                    <button type="button" class="btn btn-light w-100 mt-2 border">.</button>
-                </div>
-                <div class="col-3">
-                    <button type="button" class="btn btn-primary border border-primary w-100 mt-2 border">=</button>
-                </div>
-                <div class="col-3">
-                    <button type="button" class="btn btn-light w-100 mt-2 border">+</button>
-                </div>
-              </div>
             </div>
           </div>
         </div>
       </div>
+      <!-- Layout -->
+      <div class="row gx-2 justify-content-center seven-cols">
+        <div class="col-6 col-md-2 hideBtn d-none d-md-inline">
+          <div
+            class="col-12 btn-group flex-row"
+            role="group"
+            aria-label="Button group with separator"
+          >
+            <button
+              id="rad-btn"
+              type="button"
+              class="btn btn-secondary w-100 mt-2 border active"
+            >
+              Rad
+            </button>
+            <div class="btn-group" role="group">
+              <div class="separator"></div>
+            </div>
+            <button
+              id="deg-btn"
+              type="button"
+              class="btn btn-secondary w-100 mt-2 border"
+            >
+              Deg
+            </button>
+          </div>
+        </div>
+        <div class="col-3 col-md-1 hideBtn d-none d-md-inline">
+          <button type="button" class="col-12 btn btn-secondary mt-2 border">
+            x!
+          </button>
+        </div>
+        <div class="col-3 col-md-1 showBtn d-md-inline">
+          <button type="button" class="col-12 btn btn-secondary mt-2 border">
+            (
+          </button>
+        </div>
+        <div class="col-3 col-md-1 showBtn d-md-inline">
+          <button type="button" class="col-12 btn btn-secondary mt-2 border">
+            )
+          </button>
+        </div>
+        <div class="col-3 col-md-1 showBtn d-md-inline">
+          <button type="button" class="col-12 btn btn-secondary mt-2 border">
+            %
+          </button>
+        </div>
+        <div class="col-3 col-md-1 showBtn d-md-inline">
+          <button type="button" class="col-12 btn btn-secondary mt-2 border">
+            AC
+          </button>
+        </div>
+        <div class="col-3 col-md-1 hideBtn d-none d-md-inline">
+          <button
+            type="button"
+            id="inverse-btn"
+            class="col-12 btn btn-secondary mt-2 border"
+          >
+            Inv
+          </button>
+        </div>
+        <div class="col-3 col-md-1 hideBtn d-none d-md-inline">
+          <button
+            type="button"
+            id="sin-btn"
+            class="col-12 btn btn-secondary mt-2 border"
+          >
+            sin
+          </button>
+        </div>
+        <div class="col-3 col-md-1 hideBtn d-none d-md-inline">
+          <button
+            type="button"
+            id="ln-btn"
+            class="col-12 btn btn-secondary mt-2 border"
+          >
+            ln
+          </button>
+        </div>
+        <div class="col-3 col-md-1 showBtn d-md-inline">
+          <button type="button" class="col-12 btn btn-light mt-2 border">
+            7
+          </button>
+        </div>
+        <div class="col-3 col-md-1 showBtn d-md-inline">
+          <button type="button" class="col-12 btn btn-light mt-2 border">
+            8
+          </button>
+        </div>
+        <div class="col-3 col-md-1 showBtn d-md-inline">
+          <button type="button" class="col-12 btn btn-light mt-2 border">
+            9
+          </button>
+        </div>
+        <div class="col-3 col-md-1 showBtn d-md-inline">
+          <button type="button" class="col-12 btn btn-secondary mt-2 border">
+            ÷
+          </button>
+        </div>
+        <div class="col-3 col-md-1 hideBtn d-none d-md-inline">
+          <button type="button" class="col-12 btn btn-secondary mt-2 border">
+            π
+          </button>
+        </div>
+        <div class="col-3 col-md-1 hideBtn d-none d-md-inline">
+          <button
+            type="button"
+            id="cos-btn"
+            class="col-12 btn btn-secondary mt-2 border"
+          >
+            cos
+          </button>
+        </div>
+        <div class="col-3 col-md-1 hideBtn d-none d-md-inline">
+          <button
+            type="button"
+            id="log-btn"
+            class="col-12 btn btn-secondary mt-2 border"
+          >
+            log
+          </button>
+        </div>
+        <div class="col-3 col-md-1 showBtn d-md-inline">
+          <button type="button" class="col-12 btn btn-light mt-2 border">
+            4
+          </button>
+        </div>
+        <div class="col-3 col-md-1 showBtn d-md-inline">
+          <button type="button" class="col-12 btn btn-light mt-2 border">
+            5
+          </button>
+        </div>
+        <div class="col-3 col-md-1 showBtn d-md-inline">
+          <button type="button" class="col-12 btn btn-light mt-2 border">
+            6
+          </button>
+        </div>
+        <div class="col-3 col-md-1 showBtn d-md-inline">
+          <button type="button" class="col-12 btn btn-secondary mt-2 border">
+            ×
+          </button>
+        </div>
+        <div class="col-3 col-md-1 hideBtn d-none d-md-inline">
+          <button type="button" class="col-12 btn btn-secondary mt-2 border">
+            e
+          </button>
+        </div>
+        <div class="col-3 col-md-1 hideBtn d-none d-md-inline">
+          <button
+            type="button"
+            id="tan-btn"
+            class="col-12 btn btn-secondary mt-2 border"
+          >
+            tan
+          </button>
+        </div>
+        <div class="col-3 col-md-1 hideBtn d-none d-md-inline">
+          <button
+            type="button"
+            id="sqrt-btn"
+            class="col-12 btn btn-secondary mt-2 border"
+          >
+            √
+          </button>
+        </div>
+        <div class="col-3 col-md-1 showBtn d-md-inline">
+          <button type="button" class="col-12 btn btn-light mt-2 border">
+            1
+          </button>
+        </div>
+        <div class="col-3 col-md-1 showBtn d-md-inline">
+          <button type="button" class="col-12 btn btn-light mt-2 border">
+            2
+          </button>
+        </div>
+        <div class="col-3 col-md-1 showBtn d-md-inline">
+          <button type="button" class="col-12 btn btn-light mt-2 border">
+            3
+          </button>
+        </div>
+        <div class="col-3 col-md-1 showBtn d-md-inline">
+          <button type="button" class="col-12 btn btn-secondary mt-2 border">
+            -
+          </button>
+        </div>
+        <div class="col-3 col-md-1 hideBtn d-none d-md-inline">
+          <button
+            type="button"
+            id="ans-btn"
+            class="col-12 btn btn-secondary mt-2 border"
+          >
+            Ans
+          </button>
+        </div>
+        <div class="col-3 col-md-1 hideBtn d-none d-md-inline">
+          <button type="button" class="col-12 btn btn-secondary mt-2 border">
+            EXP
+          </button>
+        </div>
+        <div class="col-3 col-md-1 hideBtn d-none d-md-inline">
+          <button
+            type="button"
+            id="xy-btn"
+            class="col-12 btn btn-secondary mt-2 border"
+          >
+            x<sup>y</sup>
+          </button>
+        </div>
+        <div class="col-3 col-md-1 showBtn d-md-inline">
+          <button type="button" class="col-12 btn btn-light mt-2 border">
+            0
+          </button>
+        </div>
+        <div class="col-3 col-md-1 showBtn d-md-inline">
+          <button type="button" class="col-12 btn btn-light mt-2 border">
+            .
+          </button>
+        </div>
+        <div class="col-3 col-md-1 showBtn d-md-inline">
+          <button
+            type="button"
+            class="col-12 btn btn-primary mt-2 border border-primary"
+          >
+            =
+          </button>
+        </div>
+        <div class="col-3 col-md-1 showBtn d-md-inline">
+          <button type="button" class="col-12 btn btn-secondary mt-2 border">
+            +
+          </button>
+        </div>
+        <div class="col-3 col-md-1 hideBtn d-none d-md-none">
+          <button
+            type="button"
+            class="col-12 btn btn-primary mt-2 border border-primary"
+          >
+            =
+          </button>
+        </div>
+        <div class="col-3 col-md-1 hideBtn invisible d-none">
+          <button type="button" class="disabled col-12 btn mt-4"></button>
+        </div>
+      </div>
+
+      <div class="col-2 d-md-none">
+        <div
+          id="toggleBtn"
+          class="btn-group"
+          role="group"
+          aria-label="Button group with separator"
+        >
+          <button
+            id="123-btn"
+            type="button"
+            class="btn btn-blue w-100 mt-2 border border-end-0 rounded-start-pill active"
+          >
+            123
+          </button>
+          <div class="btn-group" role="group">
+            <div class="separator"></div>
+          </div>
+          <button
+            id="fx-btn"
+            type="button"
+            class="btn btn-blue w-100 mt-2 border border-start-0 rounded-end-pill"
+          >
+            Fx
+          </button>
+        </div>
+      </div>
     </div>
 
-    <!--Bootstrap JavaScript-->
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
-
-    <!-- Custom JavaScript -->
-    <script src="./script.js">
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
